MOSIP-43314: Added additional dependencies for masterdata
Signed-off-by: Jayesh Kharode <jayesh.kharode@technoforte.co.in>

--- a/api-test/src/main/resources/masterdata/FetchAllRegCent/FetchAllRegCent.yml
+++ b/api-test/src/main/resources/masterdata/FetchAllRegCent/FetchAllRegCent.yml
@@ -6,6 +6,7 @@ FetchAllRegCent:
       role: admin
       checkErrorsOnlyInResponse: true
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchAllRegCent/fetchAllRegCent
       outputTemplate: masterdata/FetchAllRegCent/fetchAllRegCentResult
       input: '{
