--- a/api-test/src/main/resources/masterdata/FetchRegCent/FetchRegCent.yml
+++ b/api-test/src/main/resources/masterdata/FetchRegCent/FetchRegCent.yml
@@ -7,6 +7,7 @@ FetchRegCent:
       checkErrorsOnlyInResponse: true
       templateFields: ["langcode"]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/FetchRegCent/fetchRegCentResult
       input: '{
@@ -33,6 +34,7 @@ FetchRegCent:
       checkErrorsOnlyInResponse: true
       templateFields: ["langcode"]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/FetchRegCent/fetchRegCentResult
       input: '{
@@ -58,6 +60,7 @@ FetchRegCent:
       description: Retrieve Registration Center details with invalid latitude
       role: admin
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/error
       input: '{
@@ -88,6 +91,7 @@ FetchRegCent:
       description: Retrieve Registration Center details with invalid longitude
       role: admin
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/error
       input: '{
@@ -120,6 +124,7 @@ FetchRegCent:
       checkErrorsOnlyInResponse: true
       templateFields: ["langcode"]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/FetchRegCent/fetchRegCentResult
       input: '{
@@ -144,6 +149,7 @@ FetchRegCent:
       description: Retrieve Registration Center details with invalid locationcode
       role: admin
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/error
       input: '{
@@ -177,6 +183,7 @@ FetchRegCent:
       checkErrorsOnlyInResponse: true
       templateFields: ["langcode"]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/FetchRegCent/fetchRegCentHolidayResult
       input: '{
@@ -202,6 +209,7 @@ FetchRegCent:
       description: Retrieve Registration Center Holiday details with invalid registrationcenterid
       role: admin
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/error
       input: '{
@@ -234,6 +242,7 @@ FetchRegCent:
       checkErrorsOnlyInResponse: true
       templateFields: ["langcode"]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/FetchRegCent/fetchRegCentResult
       input: '{
@@ -261,6 +270,7 @@ FetchRegCent:
       checkErrorsOnlyInResponse: true
       templateFields: ["langcode"]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/FetchRegCent/fetchRegCentResult
       input: '{
@@ -287,6 +297,7 @@ FetchRegCent:
       role: admin
       templateFields: ["name"]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/error
       input: '{
@@ -318,6 +329,7 @@ FetchRegCent:
       role: admin
       templateFields: ["name"]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/error
       input: '{
@@ -350,6 +362,7 @@ FetchRegCent:
       checkErrorsOnlyInResponse: true
       templateFields: ["langcode"]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/FetchRegCent/fetchRegCentResult
       input: '{
@@ -375,6 +388,7 @@ FetchRegCent:
       role: admin
       templateFields: ["langcode"]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/FetchRegCent/fetchRegCentValidateResult
       input: '{
@@ -401,6 +415,7 @@ FetchRegCent:
       description: Retrieve Registration Center details By langcode, timestamp and invalid Id
       role: admin
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/error
       input: '{
@@ -431,6 +446,7 @@ FetchRegCent:
       description: Retrieve Registration Center details By langcode, Id and invalid timestamp
       role: admin
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/error
       input: '{
@@ -462,6 +478,7 @@ FetchRegCent:
       checkErrorsOnlyInResponse: true
       templateFields: ["langcode"]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/FetchRegCent/fetchRegCentResult
       input: '{
@@ -487,6 +504,7 @@ FetchRegCent:
       description: Retrieve Registration Center for a Zone By langcode and zonecode
       role: admin
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/error
       input: '{
@@ -519,6 +537,7 @@ FetchRegCent:
       templateFields: ["langcode"]
       checkErrorsOnlyInResponse: true
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/FetchRegCent/fetchAllRegCentWithPaginationResult
       input: '{
@@ -548,6 +567,7 @@ FetchRegCent:
       role: admin
       templateFields: ["name"]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/error
       input: '{
@@ -579,6 +599,7 @@ FetchRegCent:
       role: admin
       templateFields: ["name"]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/error
       input: '{
@@ -612,6 +633,7 @@ FetchRegCent:
       checkErrorsOnlyInResponse: true
       templateFields: []
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/FetchRegCent/fetchAllRegCentResult
       input: '{
@@ -637,6 +659,7 @@ FetchRegCent:
       role: admin
       templateFields: []
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/error
       input: '{
@@ -669,6 +692,7 @@ FetchRegCent:
       role: admin
       templateFields: [""]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       checkErrorsOnlyInResponse: true
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/FetchRegCent/fetchAllRegCentWithPaginationResult
@@ -696,6 +720,7 @@ FetchRegCent:
       role: admin
       templateFields: [""]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/error
       input: '{
@@ -728,6 +753,7 @@ FetchRegCent:
       role: admin
       templateFields: [""]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/error
       input: '{
@@ -759,6 +785,7 @@ FetchRegCent:
       role: admin
       templateFields: [""]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/error
       input: '{
@@ -790,6 +817,7 @@ FetchRegCent:
       role: admin
       templateFields: [""]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       checkErrorsOnlyInResponse: true
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/FetchRegCent/fetchAllRegCentWithPaginationResult
@@ -817,6 +845,7 @@ FetchRegCent:
       role: admin
       templateFields: [""]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/error
       input: '{
@@ -849,6 +878,7 @@ FetchRegCent:
       role: admin
       templateFields: []
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/error
       input: '{
@@ -881,6 +911,7 @@ FetchRegCent:
       role: admin
       templateFields: [""]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateRegCenter_01
       inputTemplate: masterdata/FetchRegCent/fetchRegCent
       outputTemplate: masterdata/error
       input: '{
