--- a/api-test/src/main/resources/masterdata/RegistrationCenter/CreateRegistrationCenter.yml
+++ b/api-test/src/main/resources/masterdata/RegistrationCenter/CreateRegistrationCenter.yml
@@ -7,6 +7,7 @@ CreateRegistrationCenter:
       checkErrorsOnlyInResponse: true
       templateFields: ["addressLine1","addressLine2","addressLine3","langCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_UpdateLocationStatus_01
       inputTemplate: masterdata/RegistrationCenter/registrationCenter
       outputTemplate: masterdata/RegistrationCenter/registrationCenterResult
       input: '{
@@ -49,6 +50,7 @@ CreateRegistrationCenter:
       role: admin
       templateFields: ["name","addressLine1","addressLine2","addressLine3","timeZone"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_UpdateLocationStatus_01
       inputTemplate: masterdata/RegistrationCenter/registrationCenter
       outputTemplate: masterdata/error
       input: '{
@@ -95,6 +97,7 @@ CreateRegistrationCenter:
       role: admin
       templateFields: ["name","addressLine1","addressLine2","addressLine3","timeZone"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_UpdateLocationStatus_01
       inputTemplate: masterdata/RegistrationCenter/registrationCenter
       outputTemplate: masterdata/error
       input: '{
@@ -140,6 +143,7 @@ CreateRegistrationCenter:
       role: admin
       templateFields: ["name","addressLine1","addressLine2","addressLine3","timeZone"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_UpdateLocationStatus_01
       inputTemplate: masterdata/RegistrationCenter/registrationCenter
       outputTemplate: masterdata/error
       input: '{
@@ -185,6 +189,7 @@ CreateRegistrationCenter:
       role: admin
       templateFields: ["name","addressLine1","addressLine2","addressLine3","timeZone","langCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_UpdateLocationStatus_01
       inputTemplate: masterdata/RegistrationCenter/registrationCenter
       outputTemplate: masterdata/error
       input: '{
@@ -233,6 +238,7 @@ CreateRegistrationCenter:
       role: admin
       templateFields: ["name","addressLine1","addressLine2","addressLine3","timeZone","langCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_UpdateLocationStatus_01
       inputTemplate: masterdata/RegistrationCenter/registrationCenter
       outputTemplate: masterdata/error
       input: '{
