MOSIP-43314: Added additional dependencies for masterdata
Signed-off-by: Jayesh Kharode <jayesh.kharode@technoforte.co.in>

--- a/api-test/src/main/resources/masterdata/DeleteLocationData/DeleteLocationData.yml
+++ b/api-test/src/main/resources/masterdata/DeleteLocationData/DeleteLocationData.yml
@@ -6,6 +6,7 @@ DeleteLocationData:
       role: admin
       checkErrorsOnlyInResponse: true
       restMethod: delete
+      additionalDependencies: TC_Masterdata_UpdateLocationStatus_01
       inputTemplate: masterdata/DeleteLocationData/DeleteLocationData
       outputTemplate: masterdata/DeleteLocationData/DeleteLocationDataResult
       input: '{
