--- a/api-test/src/main/resources/masterdata/MachineSpecification/CreateMachineSpecification.yml
+++ b/api-test/src/main/resources/masterdata/MachineSpecification/CreateMachineSpecification.yml
@@ -15,7 +15,7 @@ CreateMachineSpecification:
     "id": "HP04",
     "isActive": true,
     "langCode": "eng",
-    "machineTypeCode": "Laptop2",
+    "machineTypeCode": "$ID:CreateMachineType_All_Valid_Smoke_sid_code$",
     "minDriverversion": "3.2",
     "model": "1234",
     "name": "HP",
@@ -562,7 +562,7 @@ CreateMachineSpecification:
     "id": "HP04",
     "isActive": true,
     "langCode": "eng",
-    "machineTypeCode": "Laptop2",
+    "machineTypeCode": "$ID:CreateMachineType_All_Valid_Smoke_sid_code$",
     "minDriverversion": "3.2",
     "model": "1234",
     "name": "HP",
