--- a/api-test/src/main/resources/masterdata/DeleteHoliday/deleteHoliday.yml
+++ b/api-test/src/main/resources/masterdata/DeleteHoliday/deleteHoliday.yml
@@ -10,11 +10,11 @@ DeleteHoliday:
       outputTemplate: masterdata/DeleteHoliday/deleteHolidayResult
       input: '{
        "requesttime": "$TIMESTAMP$",
-      "holidayDate": "2020-08-15",
+      "holidayDate": "$ID:CreateHoliday_All_Valid_Smoke_sid_holidayDate$",
       "locationCode": "$LOCATIONCODE$"
 }'
       output: '{
-      "holidayDate": "2020-08-15",
+      "holidayDate": "$ID:CreateHoliday_All_Valid_Smoke_sid_holidayDate$",
       "locationCode": "$REMOVE$"
 }'
 
