--- a/api-test/src/main/resources/masterdata/FetchAllMachineSpecification/FetchAllMachineSpecification.yml
+++ b/api-test/src/main/resources/masterdata/FetchAllMachineSpecification/FetchAllMachineSpecification.yml
@@ -7,6 +7,7 @@ FetchAllDeviceType:
       checkErrorsOnlyInResponse: true
       templateFields: []
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateMachineSpecification_01
       inputTemplate: masterdata/FetchAllDeviceType/fetchAllDeviceTypes
       outputTemplate: masterdata/FetchAllDeviceType/fetchAllDeviceTypesResult
       input: '{
