--- a/api-test/src/main/resources/masterdata/FilterMachineType/FilterMachineType.yml
+++ b/api-test/src/main/resources/masterdata/FilterMachineType/FilterMachineType.yml
@@ -13,7 +13,7 @@ FilterMachineType:
 	"filters": [{
 		"columnName": "name",
 		"type": "unique",
-		"text": "Laptop-2"
+		"text": "$ID:CreateMachineType_All_Valid_Smoke_sid_code$"
 	}],
 	"languageCode": "eng",
 	"requesttime": "$TIMESTAMP$"
@@ -34,7 +34,7 @@ FilterMachineType:
 	"filters": [{
 		"columnName": "name",
 		"type": "all",
-		"text": "Laptop-2"
+		"text": "$ID:CreateMachineType_All_Valid_Smoke_sid_code$"
 	}],
 	"languageCode": "eng",
 	"requesttime": "$TIMESTAMP$"
@@ -55,7 +55,7 @@ FilterMachineType:
 	"filters": [{
 		"columnName": "name",
 		"type": "",
-		"text": "Laptop-2"
+		"text": "$ID:CreateMachineType_All_Valid_Smoke_sid_code$"
 	}],
 	"languageCode": "eng",
 	"requesttime": "$TIMESTAMP$"
@@ -81,7 +81,7 @@ FilterMachineType:
 	"filters": [{
 		"columnName": "",
 		"type": "all",
-		"text": "Laptop-2"
+		"text": "$ID:CreateMachineType_All_Valid_Smoke_sid_code$"
 	}],
 	"languageCode": "eng",
 	"requesttime": "$TIMESTAMP$"
@@ -107,7 +107,7 @@ FilterMachineType:
 	"filters": [{
 		"columnName": "name",
 		"type": "all",
-		"text": "Laptop-2"
+		"text": "$ID:CreateMachineType_All_Valid_Smoke_sid_code$"
 	}],
 	"languageCode": "eng",
 	"requesttime": "2018-12-1006:12:52.994Z"
@@ -133,7 +133,7 @@ FilterMachineType:
 	"filters": [{
 		"columnName": "ndddddame",
 		"type": "all",
-		"text": "Laptop-2"
+		"text": "$ID:CreateMachineType_All_Valid_Smoke_sid_code$"
 	}],
 	"languageCode": "eng",
 	"requesttime": "$TIMESTAMP$"
@@ -158,7 +158,7 @@ FilterMachineType:
 	"filters": [{
 		"columnName": "name",
 		"type": "alddddl",
-		"text": "Laptop-2"
+		"text": "$ID:CreateMachineType_All_Valid_Smoke_sid_code$"
 	}],
 	"languageCode": "eng",
 	"requesttime": "$TIMESTAMP$"
