--- a/api-test/src/main/resources/masterdata/FilterMachines/FilterMachines.yml
+++ b/api-test/src/main/resources/masterdata/FilterMachines/FilterMachines.yml
@@ -6,6 +6,7 @@ FilterMachines:
       role: globalAdmin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateMachine_01
       inputTemplate: masterdata/FilterMachines/filterMachines
       outputTemplate: masterdata/FilterMachines/filterMachinesResult
       input: '{
@@ -32,6 +33,7 @@ FilterMachines:
       role: globalAdmin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateMachine_01
       inputTemplate: masterdata/FilterMachines/filterMachines
       outputTemplate: masterdata/FilterMachines/filterMachinesResult
       input: '{
