--- a/api-test/src/main/resources/masterdata/Machine/CreateMachine.yml
+++ b/api-test/src/main/resources/masterdata/Machine/CreateMachine.yml
@@ -6,6 +6,7 @@ CreateMachine:
       role: globalAdmin
       templateFields: ["name"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_UpdateRegCentStatus_01
       inputTemplate: masterdata/Machine/machine
       outputTemplate: masterdata/Machine/machineResult
       input: '{
@@ -42,6 +43,7 @@ CreateMachine:
       role: globalAdmin
       templateFields: ["name"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_UpdateRegCentStatus_01
       inputTemplate: masterdata/Machine/machine
       outputTemplate: masterdata/error
       input: '{
@@ -75,6 +77,7 @@ CreateMachine:
       role: admin
       templateFields: ["name"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_UpdateRegCentStatus_01
       inputTemplate: masterdata/Machine/machine
       outputTemplate: masterdata/error
       input: '{
@@ -108,6 +111,7 @@ CreateMachine:
       role: admin
       templateFields: ["name"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_UpdateRegCentStatus_01
       inputTemplate: masterdata/Machine/machine
       outputTemplate: masterdata/error
       input: '{
@@ -141,6 +145,7 @@ CreateMachine:
       role: admin
       templateFields: ["name"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_UpdateRegCentStatus_01
       inputTemplate: masterdata/Machine/machine
       outputTemplate: masterdata/error
       input: '{
