--- a/api-test/src/main/resources/masterdata/SearchMachine/SearchMachine.yml
+++ b/api-test/src/main/resources/masterdata/SearchMachine/SearchMachine.yml
@@ -7,6 +7,7 @@ SearchMachine:
       checkErrorsOnlyInResponse: true
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateMachine_01
       inputTemplate: masterdata/SearchMachine/searchMachine
       outputTemplate: masterdata/SearchMachine/searchMachineResult
       input: '{
@@ -40,6 +41,7 @@ SearchMachine:
       checkErrorsOnlyInResponse: true
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateMachine_01
       inputTemplate: masterdata/SearchMachine/searchMachine
       outputTemplate: masterdata/SearchMachine/searchMachineResult
       input: '{
@@ -73,6 +75,7 @@ SearchMachine:
       checkErrorsOnlyInResponse: true
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateMachine_01
       inputTemplate: masterdata/SearchMachine/searchMachine
       outputTemplate: masterdata/SearchMachine/searchMachineResult
       input: '{
@@ -105,6 +108,7 @@ SearchMachine:
       role: globalAdmin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateMachine_01
       inputTemplate: masterdata/SearchMachine/searchMachine
       outputTemplate: masterdata/SearchMachine/searchMachineResult
       input: '{
@@ -150,6 +154,7 @@ SearchMachine:
       role: globalAdmin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateMachine_01
       inputTemplate: masterdata/SearchMachine/searchMachine
       outputTemplate: masterdata/SearchMachine/searchMachineResult
       input: '{
@@ -195,6 +200,7 @@ SearchMachine:
       role: globalAdmin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateMachine_01
       inputTemplate: masterdata/SearchMachine/searchMachine
       outputTemplate: masterdata/SearchMachine/searchMachineResult
       input: '{
